Better configs found during automated processing

--- a/configs/live/binance/MATICUSDT/4.0.0/spot/live_config.json
+++ b/configs/live/binance/MATICUSDT/4.0.0/spot/live_config.json
@@ -1,53 +1,53 @@
-{"config_name": "binance_maticusdt_211days_adg0.86%_bkr100.00%",
+{"config_name": "binance_maticusdt_211days_adg1.18%_bkr99.93%",
  "logging_level": 0,
  "long": {"enabled": true,
-          "iprc_MAr_coeffs": [[-0.25743349454868736, 0.3588580276909547],
-                              [-0.3100505792499082, -0.12663339489959974],
-                              [0.04562317877943504, 0.19954646498425838]],
-          "iprc_const": 1.0080680008906542,
-          "iqty_MAr_coeffs": [[-0.2957257398632049, -0.23863613522309252],
-                              [0.0313964187821569, -0.22552219704652063],
-                              [-0.3156011639617113, -0.11517213003657195]],
-          "iqty_const": 0.3140593052041162,
-          "markup_MAr_coeffs": [[-0.03641450362138122, -0.10638910682163945],
-                                [0.08089917007687569, 0.22019834106509817],
-                                [0.11545073531818416, 0.36277122893774444]],
-          "markup_const": 1.0281506152296314,
-          "pbr_limit": 0.02598255266179687,
-          "pbr_stop_loss": 0.9160456756959051,
-          "rprc_MAr_coeffs": [[0.18040232212358603, -0.08802369277067136],
-                              [-0.18199843738481278, 0.2670164510019848],
-                              [-0.23871289022083916, 0.021918875133828897]],
-          "rprc_PBr_coeffs": [[-0.7262696120592446, -0.36063746073695224]],
-          "rprc_const": 0.9986362936617343,
-          "rqty_MAr_coeffs": [[-0.19253294834128645, 0.007330422266656824],
-                              [-0.08650152897777501, -0.074428275559693],
-                              [0.27415796103851336, -0.3874952725119243]],
-          "rqty_const": 1.7252867595918495},
- "max_span": 9612.385982155332,
- "min_span": 866.4783994699791,
+          "iprc_MAr_coeffs": [[0.03784508657156949, -0.05065242713052856],
+                              [-0.19183857683305844, 0.24345944773225991],
+                              [0.32651959425317223, 0.27839079309275844]],
+          "iprc_const": 0.9902812602932729,
+          "iqty_MAr_coeffs": [[-0.389947845769764, -0.0806003409782616],
+                              [-0.3713311111631978, 0.3311745553472062],
+                              [-0.29234847974471495, -0.31196059090537437]],
+          "iqty_const": 0.10346422845515729,
+          "markup_MAr_coeffs": [[-0.15222451560769049, 0.3943273022291222],
+                                [-0.295440747098238, 0.07876329752472067],
+                                [0.04853825991971972, 0.20867774823459265]],
+          "markup_const": 1.0004309293114315,
+          "pbr_limit": 0.9088793983050224,
+          "pbr_stop_loss": 0.09112060169497757,
+          "rprc_MAr_coeffs": [[-0.015769216556178935, 0.25184710490260176],
+                              [-0.39143984438076296, 0.13088931368949477],
+                              [-0.1764544276239539, 0.27423653717931096]],
+          "rprc_PBr_coeffs": [[-0.2739046658238604, -0.25368564771557617]],
+          "rprc_const": 0.9916068507275669,
+          "rqty_MAr_coeffs": [[-0.16025437175632085, 0.39010642756566316],
+                              [-0.29055985391682676, -0.15416630137251058],
+                              [0.23454919516498188, -0.01889024527055538]],
+          "rqty_const": 0.6493412876184121},
+ "max_span": 2004.6599056167952,
+ "min_span": 164.86283626532628,
  "n_spans": 3,
  "shrt": {"enabled": false,
-          "iprc_MAr_coeffs": [[-0.20611471455798186, 0.4],
-                              [0.4, 0.28698073154811865],
-                              [-0.373884796449886, -0.18323126656610178]],
-          "iprc_const": 1.03,
-          "iqty_MAr_coeffs": [[-0.23258579061565512, 0.24450483125964778],
-                              [0.21114799664968065, 0.03434168600978371],
-                              [0.11939035965322783, 0.1714953253168789]],
-          "iqty_const": 0.4145860227836068,
-          "markup_MAr_coeffs": [[0.09599464990813192, 0.13474956077340788],
-                                [-0.04946400765933041, -0.19041027884088194],
-                                [-0.25494938691893976, 0.35099790172639506]],
-          "markup_const": 0.9769601606270572,
-          "pbr_limit": 0.47348288550008866,
-          "pbr_stop_loss": 0.9197383027785493,
-          "rprc_MAr_coeffs": [[-0.31501072429221694, -0.18531032095865665],
-                              [-0.2562209386506114, -0.21449982806648027],
-                              [0.07286368985939551, 0.3685210988413521]],
-          "rprc_PBr_coeffs": [[0.022525168997792114, 0.970870011019772]],
-          "rprc_const": 1.026385146351517,
-          "rqty_MAr_coeffs": [[0.08276650094520345, 0.25887816555515436],
-                              [-0.4, -0.15855525684343114],
-                              [0.3221383511232943, -0.30321880472093626]],
-          "rqty_const": 0.8665239110826661}}
+          "iprc_MAr_coeffs": [[0.07592135596498634, -0.03984617797607388],
+                              [-0.1415012439594336, -0.08144473448621915],
+                              [-0.018447642871465646, 0.25284205637576324]],
+          "iprc_const": 1.0076490145611572,
+          "iqty_MAr_coeffs": [[-0.31136313805782023, 0.044605761512243235],
+                              [-0.3725597016244679, 0.39753753039890155],
+                              [0.06576702071155763, -0.3083428476769753]],
+          "iqty_const": 0.3706712253271467,
+          "markup_MAr_coeffs": [[0.09896005161893777, 0.24244102610291707],
+                                [-0.02039844401292501, 0.3126806772535122],
+                                [-0.03556381415969874, -0.0006762114468769077]],
+          "markup_const": 0.9815030390292184,
+          "pbr_limit": 0.23075739081736946,
+          "pbr_stop_loss": 0.48487077982067556,
+          "rprc_MAr_coeffs": [[-0.08491147165812932, 0.04005112841287627],
+                              [-0.034891131569621814, 0.0676049721783016],
+                              [-0.12387812427973463, -0.20145836805172546]],
+          "rprc_PBr_coeffs": [[0.3015014536237292, 0.5059571212397177]],
+          "rprc_const": 1.0164746537410383,
+          "rqty_MAr_coeffs": [[-0.4, -0.13214229113750522],
+                              [-0.16086128127007304, 0.15554598175661805],
+                              [-0.11431748209917585, -0.23064891226727086]],
+          "rqty_const": 0.22260209009539667}}
