Better configs found during automated processing

--- a/configs/live/binance/RVNUSDT/4.0.0/spot/live_config.json
+++ b/configs/live/binance/RVNUSDT/4.0.0/spot/live_config.json
@@ -1,53 +1,43 @@
-{"config_name": "binance_rvnusdt_211days_adg0.95%_bkr99.89%",
+{"config_name": "binance_rvnusdt_211days_adg1.06%_bkr99.98%",
  "logging_level": 0,
  "long": {"enabled": true,
-          "iprc_MAr_coeffs": [[-0.11201504766092939, 0.3906298739605714],
-                              [0.16334027077828608, 0.12513342510969297],
-                              [0.2213813330231962, 0.2900736240963505]],
-          "iprc_const": 0.9896430239367343,
-          "iqty_MAr_coeffs": [[0.1519673556699883, -0.050250219340908606],
-                              [-0.2649804056322214, 0.17576169592441093],
-                              [0.3561670335889088, 0.09203148783579641]],
-          "iqty_const": 0.01829414436683163,
-          "markup_MAr_coeffs": [[-0.2777826498824724, 0.18267439115504158],
-                                [-0.16073624392088026, 0.35279039725016864],
-                                [0.17834909093976362, 0.3295532975333268]],
-          "markup_const": 1.0026534831032043,
-          "pbr_limit": 0.4472258468675626,
-          "pbr_stop_loss": 0.5527741531324374,
-          "rprc_MAr_coeffs": [[-0.06505406823319176, 0.09033012706765235],
-                              [-0.2745430938152552, -0.10641285160146378],
-                              [0.06802212278247445, 0.0155871059009289]],
-          "rprc_PBr_coeffs": [[0.045606759929033, -0.08873326230761962]],
-          "rprc_const": 0.9912679643078522,
-          "rqty_MAr_coeffs": [[-0.09171524828964157, 0.2392106627236057],
-                              [0.22378958287087955, -0.05141914225790775],
-                              [-0.22914514533263486, -0.04512943112455254]],
-          "rqty_const": 0.010842147256890328},
- "max_span": 15132.98282074434,
- "min_span": 21.662437253148386,
+          "iprc_MAr_coeffs": [[-0.7514145791607727, 0.7721867595183104],
+                              [-0.5826911939562422, 0.053724159693626],
+                              [0.16375973043308906, -0.5863743802558319]],
+          "iprc_const": 0.97782827736077,
+          "iqty_MAr_coeffs": [[0.37293595176512784, -0.22504814419888794],
+                              [-0.6715691205906701, -0.4614139761706556],
+                              [-0.049905367553768454, 0.12694501013332798]],
+          "iqty_const": 0.03418086897951505,
+          "markup_MAr_coeffs": [[-0.22898485807150343, -0.4510567898794946],
+                                [-0.5080825825979453, 0.537038385027694],
+                                [0.03919607845635397, 0.45214653354415435]],
+          "markup_const": 1.0189558220499777,
+          "pbr_limit": 0.2743715189382404,
+          "pbr_stop_loss": 0.7256284810617596,
+          "rprc_MAr_coeffs": [[-0.4230461465408884, 0.049708893182744705],
+                              [-0.6813356717945352, -0.14009561970111903],
+                              [0.7254948523116348, -0.13659430668392197]],
+          "rprc_PBr_coeffs": [[0.6277462693777087, -0.5597347495045712]],
+          "rprc_const": 0.9874936951778555,
+          "rqty_MAr_coeffs": [[0.06400434115855834, -0.3590963854218656],
+                              [0.1577582989396489, 0.11432411546357064],
+                              [0.35756242497630153, -0.11244230154981673]],
+          "rqty_const": 0.23450731500967975},
+ "max_span": 4315.010092867423,
+ "min_span": 366.935204807216,
  "n_spans": 3,
  "shrt": {"enabled": false,
-          "iprc_MAr_coeffs": [[-0.2547535277847873, -0.37335478099407915],
-                              [-0.11368100697251593, 0.07571561765535738],
-                              [-0.08897886795377982, 0.09651847616855273]],
-          "iprc_const": 1.0123950515642621,
-          "iqty_MAr_coeffs": [[0.4, 0.366673619046333],
-                              [0.3309838220392216, -0.4],
-                              [-0.08620022715396874, 0.34231947516477435]],
-          "iqty_const": 0.3030458585197312,
-          "markup_MAr_coeffs": [[-0.22009034916820924, -0.2667693089022295],
-                                [0.17897816288112156, -0.4],
-                                [0.3219556522801969, 0.052331500426439956]],
-          "markup_const": 0.9970157856732829,
-          "pbr_limit": 0.7482984549942867,
-          "pbr_stop_loss": 0.8412544037386629,
-          "rprc_MAr_coeffs": [[-0.36022676940053894, -0.09257879172571397],
-                              [-0.09686864807378918, -0.10859730445108241],
-                              [-0.268494445890361, -0.2937380133746979]],
-          "rprc_PBr_coeffs": [[0.6517004149221447, 0.9080702008553855]],
-          "rprc_const": 1.0056749495318695,
-          "rqty_MAr_coeffs": [[-0.06299108554514006, -0.14022429266827652],
-                              [0.1489377572988163, 0.048184966152534224],
-                              [-0.3496996111042741, 0.26366344877257747]],
-          "rqty_const": 1.7345405403296124}}
+          "iprc_MAr_coeffs": [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0]],
+          "iprc_const": 0.0,
+          "iqty_MAr_coeffs": [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0]],
+          "iqty_const": 0.0,
+          "markup_MAr_coeffs": [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0]],
+          "markup_const": 0.0,
+          "pbr_limit": 0.0,
+          "pbr_stop_loss": 0.0,
+          "rprc_MAr_coeffs": [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0]],
+          "rprc_PBr_coeffs": [[0.0, 0.0]],
+          "rprc_const": 0.0,
+          "rqty_MAr_coeffs": [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0]],
+          "rqty_const": 0.0}}
