--- a/configs/live/binance/MATICUSDT/4.0.0/spot/live_config.json
+++ b/configs/live/binance/MATICUSDT/4.0.0/spot/live_config.json
@@ -1,53 +1,43 @@
-{"config_name": "binance_maticusdt_211days_adg1.18%_bkr99.93%",
+{"config_name": "binance_maticusdt_211days_adg1.56%_bkr99.89%",
  "logging_level": 0,
  "long": {"enabled": true,
-          "iprc_MAr_coeffs": [[0.03784508657156949, -0.05065242713052856],
-                              [-0.19183857683305844, 0.24345944773225991],
-                              [0.32651959425317223, 0.27839079309275844]],
-          "iprc_const": 0.9902812602932729,
-          "iqty_MAr_coeffs": [[-0.389947845769764, -0.0806003409782616],
-                              [-0.3713311111631978, 0.3311745553472062],
-                              [-0.29234847974471495, -0.31196059090537437]],
-          "iqty_const": 0.10346422845515729,
-          "markup_MAr_coeffs": [[-0.15222451560769049, 0.3943273022291222],
-                                [-0.295440747098238, 0.07876329752472067],
-                                [0.04853825991971972, 0.20867774823459265]],
-          "markup_const": 1.0004309293114315,
-          "pbr_limit": 0.9088793983050224,
-          "pbr_stop_loss": 0.09112060169497757,
-          "rprc_MAr_coeffs": [[-0.015769216556178935, 0.25184710490260176],
-                              [-0.39143984438076296, 0.13088931368949477],
-                              [-0.1764544276239539, 0.27423653717931096]],
-          "rprc_PBr_coeffs": [[-0.2739046658238604, -0.25368564771557617]],
-          "rprc_const": 0.9916068507275669,
-          "rqty_MAr_coeffs": [[-0.16025437175632085, 0.39010642756566316],
-                              [-0.29055985391682676, -0.15416630137251058],
-                              [0.23454919516498188, -0.01889024527055538]],
-          "rqty_const": 0.6493412876184121},
- "max_span": 2004.6599056167952,
- "min_span": 164.86283626532628,
+          "iprc_MAr_coeffs": [[-0.14335040793910858, -0.22256972315327236],
+                              [-0.2657814911385486, -0.2995960488245194],
+                              [0.5212448908862968, 0.36479792686830953]],
+          "iprc_const": 0.9745728684669729,
+          "iqty_MAr_coeffs": [[-0.06826960730212417, -0.39981142869660413],
+                              [0.7227212328249591, 0.6629752255028724],
+                              [0.3377148695179905, 0.3909937368778728]],
+          "iqty_const": 0.44944270458807556,
+          "markup_MAr_coeffs": [[-0.5704165660306358, 0.4896482075278003],
+                                [-0.6884677397929515, -0.3896910553559576],
+                                [0.631418723843262, 0.7338111424361261]],
+          "markup_const": 1.0205791768849422,
+          "pbr_limit": 0.2760558049784797,
+          "pbr_stop_loss": 0.7239441950215203,
+          "rprc_MAr_coeffs": [[-0.39234247862121296, 0.2771134284623568],
+                              [-0.07948009788408454, 0.3509807445646979],
+                              [-0.7346067160536874, 0.03550775099425029]],
+          "rprc_PBr_coeffs": [[0.2552900018698514, -0.43144402200296106]],
+          "rprc_const": 0.9764857683673005,
+          "rqty_MAr_coeffs": [[-0.19448416561288356, 0.057463577722391225],
+                              [-0.15965324996236957, 0.10109430876595128],
+                              [0.2908103258938966, 0.3420207008449722]],
+          "rqty_const": 1.959931809031572},
+ "max_span": 2822.0834900992336,
+ "min_span": 468.8670738634529,
  "n_spans": 3,
  "shrt": {"enabled": false,
-          "iprc_MAr_coeffs": [[0.07592135596498634, -0.03984617797607388],
-                              [-0.1415012439594336, -0.08144473448621915],
-                              [-0.018447642871465646, 0.25284205637576324]],
-          "iprc_const": 1.0076490145611572,
-          "iqty_MAr_coeffs": [[-0.31136313805782023, 0.044605761512243235],
-                              [-0.3725597016244679, 0.39753753039890155],
-                              [0.06576702071155763, -0.3083428476769753]],
-          "iqty_const": 0.3706712253271467,
-          "markup_MAr_coeffs": [[0.09896005161893777, 0.24244102610291707],
-                                [-0.02039844401292501, 0.3126806772535122],
-                                [-0.03556381415969874, -0.0006762114468769077]],
-          "markup_const": 0.9815030390292184,
-          "pbr_limit": 0.23075739081736946,
-          "pbr_stop_loss": 0.48487077982067556,
-          "rprc_MAr_coeffs": [[-0.08491147165812932, 0.04005112841287627],
-                              [-0.034891131569621814, 0.0676049721783016],
-                              [-0.12387812427973463, -0.20145836805172546]],
-          "rprc_PBr_coeffs": [[0.3015014536237292, 0.5059571212397177]],
-          "rprc_const": 1.0164746537410383,
-          "rqty_MAr_coeffs": [[-0.4, -0.13214229113750522],
-                              [-0.16086128127007304, 0.15554598175661805],
-                              [-0.11431748209917585, -0.23064891226727086]],
-          "rqty_const": 0.22260209009539667}}
+          "iprc_MAr_coeffs": [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0]],
+          "iprc_const": 0.0,
+          "iqty_MAr_coeffs": [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0]],
+          "iqty_const": 0.0,
+          "markup_MAr_coeffs": [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0]],
+          "markup_const": 0.0,
+          "pbr_limit": 0.0,
+          "pbr_stop_loss": 0.0,
+          "rprc_MAr_coeffs": [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0]],
+          "rprc_PBr_coeffs": [[0.0, 0.0]],
+          "rprc_const": 0.0,
+          "rqty_MAr_coeffs": [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0]],
+          "rqty_const": 0.0}}
